# Thesis

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  documents.rar.REMOVED.git-id  documents.zip.REMOVED.git-id  world.npy
.aux/: ORBvoc.txt.REMOVED.git-id  VBEE.yaml  (+1 more)
VBEE/ORB_SLAM3_VBEE/: CMakeLists.txt
VBEE/ORB_SLAM3_VBEE/src/: stereo_vbee.cc  stereo_vbee_old.cc
analysis/: CMakeLists.txt  ape_rpe.py
analysis/.testing/: config.yaml
analysis/include/: camera.h  observability_scenario.h
analysis/others/: initial_analysis.yaml
analysis/results/big_skip/1/: big_skip_Baseline_1_Frame.txt  big_skip_Baseline_1_KeyFrame.txt  big_skip_Baseline_1_TrackedStats.csv  big_skip_Baseline_1_log.txt  big_skip_VBEE_1_Frame.txt  big_skip_VBEE_1_KeyFrame.txt  big_skip_VBEE_1_TrackedStats.csv  big_skip_VBEE_1_log.txt  big_skip_VBEE_and_RANSAC_1_Frame.txt  big_skip_VBEE_and_RANSAC_1_KeyFrame.txt  big_skip_VBEE_and_RANSAC_1_TrackedStats.csv  big_skip_VBEE_and_RANSAC_1_log.txt
analysis/scripts/: ape_rpe.py  average.py  lib_evo.py  libexe_version_manager.py  libtest_runner.py  test_evaluator.py  test_runner.py
analysis/src/: camera.cc  observability_scenario.cc  vbee_tester.cc
analysis/test_configs/: best_guess.yaml  optimized.yaml
analysis/trajectories/MH_01/base/: CameraTrajectory.txt  KeyFrameTrajectory.txt  run.sh
analysis/trajectories/MH_02/base/: CameraTrajectory.txt  KeyFrameTrajectory.txt  run.sh
analysis/trajectories/ground_truths/VBEE_LOW/: data.tum
analysis/trajectories/ground_truths/VBEE_LOW_HIGH/: data.tum
analysis/trajectories/ground_truths/small_skips/: data.tum
code/: CMakeLists.txt  icos_centers.py
code/2d_testbed/: AGENTS.md  README.md  camera.py  config_manager.py  constants.py  extended_cameras.py  game.py  geometry_utils.py  input_handler.py  main.py  observability_model.py  rectangle_system.py  renderer.py
code/2d_vbee_simulator/: sim.py  vbee.py
code/2d_vbee_simulator/observability_models/: discrete_boundary.py  observability_model.py
code/2d_vbee_simulator/vbee_2d/: README.md  vbee.py
code/2d_vbee_simulator/vbee_2d/observability_models/: discrete_boundary.py
code/2d_vbee_simulator/vbee_3d/: vbee.py
code/2d_vbee_simulator/vbee_3d/observability_models/: discrete_boundary.py
code/demo/: demo.cc  visualizer_demo.cc
code/demo/src/: PointImpl.cc
code/include/: Camera.h  CameraModel.h  ContinuousBackend.h  FloorPlane.h  IcosMetadata.h  IcosModel.h  Icosahedron.h  IcosahedronBackend.h  Map.h  PPEBackend.h  PPECameraInterface.h  Point.h  PointCloud.h  PointProbabilityEngine.h  Shader.h  ShaderManager.h  Utility.h  Viewer.h  Visualizer.h  VonMiserSphere.h
code/observability_generator/: calculator.py  constants.py  data_generator.py  evolver.py  existence_prob_estimator.py  knn-study.db  main.py  model.py  model_optimizer.py  observation.py  optimizer.py  optuna_test.py  plotting.py  utility.py  viewpoint.py  visualizer.py  world.py
code/observability_generator/data/: poses.csv  viewpoints.csv  worlds.csv.old
code/observability_generator/data/observations/: 0.csv  1.csv  10.csv  100.csv  1000.csv  1001.csv  1002.csv  1003.csv  1007.csv  1008.csv  101.csv  1011.csv  1018.csv  1027.csv  103.csv  1031.csv  1034.csv  1035.csv  1037.csv  1039.csv  104.csv  1045.csv  105.csv  1051.csv  1053.csv  1054.csv  1055.csv  1056.csv  1058.csv  1062.csv  1064.csv  1071.csv  1076.csv  108.csv  1086.csv  109.csv  1091.csv  1097.csv  1098.csv  11.csv  (+1555 more)
code/observability_generator/data/world_evolutions/: 1060.txt  1256.txt  1372.txt  1402.txt  1707.txt  189.txt  1921.txt  20.txt  2051.txt  2112.txt  2153.txt  2496.txt  2515.txt  2933.txt  2937.txt  2993.txt  3053.txt  3106.txt  3294.txt  495.txt  530.txt  539.txt  555.txt  556.txt  573.txt  803.txt
code/observability_generator/models/: always_half.py  always_seen.py  always_unseen.py  knn.py
code/observability_model_simulator/: README.md  game.py  observability_model.py  utility.py  vbee.py  world_save.json
code/predictor/: CMakeLists.txt  RemainingWork.txt
code/predictor/demo/: point_probability_engine_demo.cc
code/predictor/demo/include/: CameraImpl.h  MapImpl.h  PointImpl.h
code/predictor/demo/src/: CameraImpl.cc  MapImpl.cc
code/predictor/include/: FloorPlane.h  IcosModel.h  IcosahedronBackend.h  PPEFramework.h  PPEMapInterface.h  PPEPointInterface.h  PointCloud.h  PointXYZID.h  Shader.h  Utility.h  Viewer.h
code/predictor/src/: PointProbabilityEngine.cc  Viewer.cc
code/predictor/src/Graphics/: CameraModel.cc  IcosModel.cc  PointCloud.cc  VonMiserSphere.cc
code/predictor/src/PointProbabilityEngine/: 3DViews.cc
code/simulator/: CMakeLists.txt  optimizer_usage_example.cpp
code/simulator/include/: experiment.h  model_interface.h  observation.h  optimizer.h  simulator.h  viewpoint.h  world.h
code/simulator/include/models/: binned_model.h  knn_model.h  random_model.h
code/simulator/src/: experiment.cc  optimizer.cc  simulator.cc  viewpoint.cc  world.cc
code/simulator/src/models/: knn_model.cc  random_model.cc
code/src/: Camera.cc  ContinuousBackend.cc  IcosMetadata.cc  IcosModel.cc  Icosahedron.cc  IcosahedronBackend.cc  PointProbabilityEngine.cc  PointXYZID.cc  ShaderManager.cc  Utility.cc  Viewer.cc  Visualizer.cc  Visualizer.cpp
code/src/Graphics/: CameraModel.cc  CenteredPoint.cc  FloorPlane.cc  IcosModel.cc  PointCloud.cc
code/src/PointProbabilityEngine/: 3DView.cc  3DViews.cc
code/src/shaders/: axis.frag
code/vbee_2d/: vbee.py
dataset_generation/hello_plugin/: CMakeLists.txt  HelloPlugin.qml
dataset_generation/path_recorder/: CMakeLists.txt
dataset_generation/path_recorder/include/: JoystickManager.h  ObserverRobotController.h
dataset_generation/path_recorder/src/: JoystickManager.cc  JoystickPublisher.cc  ObserverRobotController.cc
dataset_generation/path_recorder/test/: JoystickManager.cc
optimization/: CMakeLists.txt  optimizer.py  test_file_by_scenario.csv
optimization/include/: world.h
optimization/results/: optuna_study.db  optuna_study_no_error.db  optuna_study_no_error.db-journal
optimization/src/: characterize_vbee.cc  world.cc
(+232 files in other folders)
