
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
find_package(Boost REQUIRED COMPONENTS serialization)

add_executable(characterize_vbee src/characterize_vbee.cc)
target_include_directories(characterize_vbee PRIVATE include)
target_link_libraries(characterize_vbee PRIVATE vbee Boost::serialization observability_scenario)

add_executable(characterize_vbee_debug src/characterize_vbee.cc)
target_include_directories(characterize_vbee_debug PRIVATE include)
target_link_libraries(characterize_vbee_debug PRIVATE vbee_debug Boost::serialization observability_scenario_debug)
target_compile_options(characterize_vbee_debug PRIVATE -O0 -g)